# ThoughtML

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SECURITY.md  project_plan.md  rust-toolchain.toml
.claude/: launch.json  settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  docs.yml
crates/thoughtml/: Cargo.toml  README.md
crates/thoughtml-wasm/: Cargo.toml
crates/thoughtml/assets/: viewer.html
crates/thoughtml/src/: canonical.rs  derive.rs  desugar.rs  diagnostics.rs  ids.rs  integration_tests.rs  lex.rs  lib.rs  main.rs  surface.rs  units.rs  validate.rs  vocab.rs
crates/thoughtml/tests/: viewer_freshness.rs
docs/: book.toml
docs/src/: SUMMARY.md  introduction.md
docs/src/appendix/: examples.md  faq.md  glossary.md
docs/src/getting-started/: first-document.md  installation.md
docs/src/guides/: cli.md  for-ai-agents.md  playground.md  use-cases.md  viewer.md
docs/src/mirror/: argument-status.md  compute.md  conflicts.md  derived-confidence.md  index.md
docs/src/reference/: diagnostics.md  fields.md  foci-and-kinds.md  index.md  modules.md  numbers.md  postures.md  questions.md  records.md  relations.md  scopes.md  syntax.md
docs/src/tutorial/: foci.md  index.md  links.md  numbers.md  questions.md  stances.md  the-mirror.md  time.md
examples/: agent-memory.thml  ai-and-jobs.thml  build-tetris.thml  canonical-core.thml  capacity-plan.thml  cost-model.thml  decision-ev.thml  decision-record.thml  estimate-revised.thml  grand-tour.thml  imports-demo.thml  incident-742.thml  multi-agent-debate.thml  profile-dialect.thml  release-bet.thml  self-audit.thml  sensitivity-demo.thml  shared-defs.thml  why-harvard.thml
tools/thoughtml-parser-rs/: Cargo.toml  README.md
tools/thoughtml-parser-rs/examples/: agent-memory.thml  ai-and-jobs.thml  cost-model.thml  decision-ev.thml  grand-tour.thml  incident-742.thml  multi-agent-debate.thml  nested-scope.thml  profile-dialect.thml  release-bet.thml  self-audit.thml  sensitivity-demo.thml  why-harvard.thml
tools/thoughtml-parser-rs/src/: canonical.rs  derive.rs  desugar.rs  formula.rs  integration_tests.rs  lib.rs  lines.rs  main.rs  parser.rs  surface.rs  validate.rs  vocab.rs
tools/thoughtml-wasm/: Cargo.toml
tools/thoughtml-wasm/src/: lib.rs
tools/thoughtml-web/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
tools/thoughtml-web/src/: detail.ts  editor.ts  examples.ts  graph.ts  icons.ts  main.ts  parse.ts  (+2 more)
web/: README.md  index.html  package-lock.json  package.json  viewer.html  vite.config.ts  vite.viewer.config.ts
web/public/: dev-model-grand.json  dev-model.json
web/src/: detail.ts  diagnostics.ts  editor.ts  examples.ts  graph.ts  legend.ts  main.ts  model.ts  parse.ts  styles.css  timeview.ts  viewer.ts
