[package]
name = "thoughtml-wasm"
version = "0.1.0"
edition = "2021"
description = "WebAssembly bindings for the ThoughtML parser."
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Depend on the library only (no clap / CLI), so it compiles cleanly to wasm.
thoughtml = { path = "../thoughtml", default-features = false }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
