[package]
name = "thoughtml-wasm"
version = "0.0.1"
edition = "2021"
description = "WebAssembly bindings for the ThoughtML v0 parser."
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Depend on the library only (no clap / CLI), so it compiles cleanly to wasm.
thoughtml = { path = "../thoughtml-parser-rs", package = "thoughtml-parser-rs", default-features = false }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true
